kernel-shark: Fix a bug when plotting the last trace record

On a first glance this patch may looks like reverting commit
9336dd6bcd38 (kernel-shark: Fix a bug in ksmodel_set_next_bin_edge())

The point is that for the last bin we want to increment its upper edge
used  when checking if the bin is empty, but we do not want to touch
the lower edge time used by kshark_find_entry_by_time().

Link: http://lore.kernel.org/linux-trace-devel/20190614135045.17223-2-ykaradzhov@vmware.com
Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=203869

Fixes: 9336dd6bcd38 ("kernel-shark: Fix a bug in ksmodel_set_next_bin_edge()")
Signed-off-by: Yordan Karadzhov <ykaradzhov@vmware.com>
Signed-off-by: Steven Rostedt (VMware) <rostedt@goodmis.org>